Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16194

qtcreator 4rc crash while create c++ file in wizard dialog qt5.6

XMLWordPrintable

      Creating any c++ file in wizard dialog towards existing project suffered from crash. Windows stack trace included.

      Tested windows vs2015 update 2 and Debian clang371.

        1. 1.png
          1.png
          74 kB
        2. 2.png
          2.png
          75 kB
        For Gerrit Dashboard: QTCREATORBUG-16194
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            jiraiya jiraiya sensei
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes