Fix crash in Wizard code handling adding to the current project

This is a partial backport of f007db9c4560bd6e302aa288f855a8a08d92ce474
from the master branch.

Task-number: QTCREATORBUG-16194
Change-Id: I4f0223c53d34ae701f05385023d5466f3d372c9f
Reviewed-by: Tim Jenssen <tim.jenssen@theqtcompany.com>
Reviewed-by: Vikas Pachdha <vikas.pachdha@theqtcompany.com>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>